Update dependencies in package.json and pnpm-lock.yaml to Tailwind CSS v4; replace autoprefixer with @tailwindcss/postcss in postcss.config.js; remove tailwind.config.js; adjust app.css for compatibility with Tailwind CSS v4.

--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.48.4",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
+		"@tailwindcss/postcss": "^4.1.16",
 		"@tailwindcss/typography": "^0.5.13",
 		"@types/eslint": "^8.56.0",
-		"autoprefixer": "^10.4.19",
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^3.13.0",
@@ -30,7 +30,7 @@
 		"prettier-plugin-svelte": "^3.0.0",
 		"svelte": "^5.43.2",
 		"svelte-check": "^4.3.3",
-		"tailwindcss": "^3.4.3",
+		"tailwindcss": "^4.1.16",
 		"typescript": "^5.0.0",
 		"vite": "^6.4.1",
 		"vitest": "^4.0.6"
