--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"test:unit": "vitest"
 	},
 	"devDependencies": {
+		"@lucide/svelte": "^0.552.0",
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.48.4",
@@ -22,6 +23,7 @@
 		"@tailwindcss/postcss": "^4.1.16",
 		"@tailwindcss/typography": "^0.5.13",
 		"@types/eslint": "^8.56.0",
+		"clsx": "^2.1.1",
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^3.13.0",
@@ -30,7 +32,10 @@
 		"prettier-plugin-svelte": "^3.0.0",
 		"svelte": "^5.43.2",
 		"svelte-check": "^4.3.3",
+		"tailwind-merge": "^3.3.1",
+		"tailwind-variants": "^3.1.1",
 		"tailwindcss": "^4.1.16",
+		"tw-animate-css": "^1.4.0",
 		"typescript": "^5.0.0",
 		"vite": "^6.4.1",
 		"vitest": "^4.0.6"
