--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
 		"test:integration": "playwright test",
-		"test:unit": "vitest"
+		"test:unit": "vitest",
+		"db:start": "brew services start postgresql",
+		"studio": "pnpm drizzle-kit studio",
+		"dev:studio": "pnpm run db:start && pnpm run studio"
 	},
 	"devDependencies": {
-		"@lucide/svelte": "^0.552.0",
+		"@internationalized/date": "^3.10.0",
+		"@lucide/svelte": "^0.544.0",
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.48.4",
@@ -23,7 +27,10 @@
 		"@tailwindcss/postcss": "^4.1.16",
 		"@tailwindcss/typography": "^0.5.13",
 		"@types/eslint": "^8.56.0",
+		"@types/pg": "^8.15.6",
+		"@types/uuid": "^11.0.0",
 		"clsx": "^2.1.1",
+		"drizzle-kit": "^0.31.6",
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^3.13.0",
@@ -35,6 +42,7 @@
 		"tailwind-merge": "^3.3.1",
 		"tailwind-variants": "^3.1.1",
 		"tailwindcss": "^4.1.16",
+		"tsx": "^4.20.6",
 		"tw-animate-css": "^1.4.0",
 		"typescript": "^5.0.0",
 		"vite": "^6.4.1",
@@ -42,7 +50,19 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@vercel/analytics": "^1.5.0"
+		"@aws-sdk/client-s3": "^3.922.0",
+		"@vercel/analytics": "^1.5.0",
+		"better-auth": "^1.3.34",
+		"bits-ui": "^2.14.2",
+		"dotenv": "^17.2.3",
+		"drizzle-orm": "^0.44.7",
+		"formsnap": "^2.0.1",
+		"nanoid": "^5.1.6",
+		"pg": "^8.16.3",
+		"stripe": "^19.3.0",
+		"sveltekit-superforms": "^2.28.0",
+		"uuid": "^13.0.0",
+		"zod": "^4.1.12"
 	},
 	"pnpm": {
 		"overrides": {
